src/org/ffmpeg/avformat/AvformatLibrary.java

	/** <i>native declaration : libavformat/avio.h:54</i> */
	public interface avio_alloc_context_write_packet_callback extends Callback {
		int apply(Pointer opaque, Pointer buf, int buf_size);
	};
	/** <i>native declaration : libavformat/avio.h:55</i> */
	public interface avio_alloc_context_seek_callback extends Callback {
		long apply(Pointer opaque, long offset, int whence);
	};
	/**
	 * Original signature : <code>AVIOContext* avio_alloc_context(unsigned char*, int, int, void*, avio_alloc_context_read_packet_callback*, avio_alloc_context_write_packet_callback*, avio_alloc_context_seek_callback*)</code><br>
	 * <i>native declaration : libavformat/avio.h:44</i><br>
	 * @deprecated use the safer methods {@link #avio_alloc_context(java.nio.ByteBuffer, int, int, com.sun.jna.Pointer, org.ffmpeg.avformat.AvformatLibrary.avio_alloc_context_read_packet_callback, org.ffmpeg.avformat.AvformatLibrary.avio_alloc_context_write_packet_callback, org.ffmpeg.avformat.AvformatLibrary.avio_alloc_context_seek_callback)} and {@link #avio_alloc_context(com.sun.jna.Pointer, int, int, com.sun.jna.Pointer, org.ffmpeg.avformat.AvformatLibrary.avio_alloc_context_read_packet_callback, org.ffmpeg.avformat.AvformatLibrary.avio_alloc_context_write_packet_callback, org.ffmpeg.avformat.AvformatLibrary.avio_alloc_context_seek_callback)} instead
	 */
	@Deprecated 
	AVIOContext avio_alloc_context(Pointer buffer, int buffer_size, int write_flag, Pointer opaque, AvformatLibrary.avio_alloc_context_read_packet_callback read_packet, AvformatLibrary.avio_alloc_context_write_packet_callback write_packet, AvformatLibrary.avio_alloc_context_seek_callback seek);
	/**
	 * Original signature : <code>AVIOContext* avio_alloc_context(unsigned char*, int, int, void*, avio_alloc_context_read_packet_callback*, avio_alloc_context_write_packet_callback*, avio_alloc_context_seek_callback*)</code><br>
	 * <i>native declaration : libavformat/avio.h:44</i>
	 */
	AVIOContext avio_alloc_context(ByteBuffer buffer, int buffer_size, int write_flag, Pointer opaque, AvformatLibrary.avio_alloc_context_read_packet_callback read_packet, AvformatLibrary.avio_alloc_context_write_packet_callback write_packet, AvformatLibrary.avio_alloc_context_seek_callback seek);
	/**
	 * Original signature : <code>void avio_flush(AVIOContext*)</code><br>
	 * <i>native declaration : libavformat/avio.h:46</i>
	 */
	void avio_flush(AVIOContext s);
	/**
	 * Original signature : <code>int avio_open(AVIOContext**, const char*, int)</code><br>
	 * <i>native declaration : libavformat/avio.h:48</i><br>
	 * @deprecated use the safer methods {@link #avio_open(org.ffmpeg.avformat.AVIOContext.ByReference[], java.lang.String, int)} and {@link #avio_open(org.ffmpeg.avformat.AVIOContext.ByReference[], com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int avio_open(PointerByReference s, Pointer url, int flags);
	/**
	 * Original signature : <code>int avio_open(AVIOContext**, const char*, int)</code><br>
	 * <i>native declaration : libavformat/avio.h:48</i>
	 */
	int avio_open(AVIOContext.ByReference s[], String url, int flags);
	/**
	 * Original signature : <code>int avio_open(AVIOContext**, const char*, int)</code><br>
	 * <i>native declaration : libavformat/avio.h:48</i>
	 */
	int avio_open(AVIOContext.ByReference s[], Pointer url, int flags);
	/**
	 * Original signature : <code>int avio_open2(AVIOContext**, const char*, int, const AVIOInterruptCB*, AVDictionary**)</code><br>
	 * <i>native declaration : libavformat/avio.h:50</i><br>
	 * @deprecated use the safer methods {@link #avio_open2(org.ffmpeg.avformat.AVIOContext.ByReference[], java.lang.String, int, org.ffmpeg.avformat.AVIOInterruptCB, org.ffmpeg.avutil.AVDictionary.ByReference[])} and {@link #avio_open2(org.ffmpeg.avformat.AVIOContext.ByReference[], com.sun.jna.Pointer, int, org.ffmpeg.avformat.AVIOInterruptCB, org.ffmpeg.avutil.AVDictionary.ByReference[])} instead
	 */
	@Deprecated 
	int avio_open2(PointerByReference s, Pointer url, int flags, AVIOInterruptCB int_cb, PointerByReference options);
	/**
	 * Original signature : <code>int avio_open2(AVIOContext**, const char*, int, const AVIOInterruptCB*, AVDictionary**)</code><br>
	 * <i>native declaration : libavformat/avio.h:50</i>
	 */
	int avio_open2(AVIOContext.ByReference s[], String url, int flags, AVIOInterruptCB int_cb, org.ffmpeg.avutil.AVDictionary.ByReference options[]);
	/**
	 * Original signature : <code>int avio_open2(AVIOContext**, const char*, int, const AVIOInterruptCB*, AVDictionary**)</code><br>
	 * <i>native declaration : libavformat/avio.h:50</i>
	 */
	int avio_open2(AVIOContext.ByReference s[], Pointer url, int flags, AVIOInterruptCB int_cb, org.ffmpeg.avutil.AVDictionary.ByReference options[]);
	/**
	 * Original signature : <code>int avio_close(AVIOContext*)</code><br>
	 * <i>native declaration : libavformat/avio.h:52</i>
	 */
	int avio_close(AVIOContext s);
	/**
	 * Original signature : <code>int avformat_version()</code><br>
	 * <i>native declaration : libavformat/avformat.h:301</i>
	 */
	int avformat_version();
	/**
	 * Original signature : <code>void av_register_all()</code><br>
	 * <i>native declaration : libavformat/avformat.h:303</i>
	 */
	void av_register_all();
	/**
	 * Original signature : <code>AVFormatContext* avformat_alloc_context()</code><br>
	 * <i>native declaration : libavformat/avformat.h:305</i>
	 */
	AVFormatContext avformat_alloc_context();
	/**
	 * Original signature : <code>void avformat_free_context(AVFormatContext*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:307</i>
	 */
	void avformat_free_context(AVFormatContext s);
	/**
	 * Original signature : <code>AVStream* avformat_new_stream(AVFormatContext*, const AVCodec*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:309</i>
	 */
	AVStream avformat_new_stream(AVFormatContext s, AVCodec c);
	/**
	 * Original signature : <code>int avformat_alloc_output_context2(AVFormatContext**, AVOutputFormat*, const char*, const char*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:311</i><br>
	 * @deprecated use the safer methods {@link #avformat_alloc_output_context2(org.ffmpeg.avformat.AVFormatContext.ByReference[], org.ffmpeg.avformat.AVOutputFormat, java.lang.String, java.lang.String)} and {@link #avformat_alloc_output_context2(org.ffmpeg.avformat.AVFormatContext.ByReference[], org.ffmpeg.avformat.AVOutputFormat, com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	int avformat_alloc_output_context2(PointerByReference ctx, AVOutputFormat oformat, Pointer format_name, Pointer filename);
	/**
	 * Original signature : <code>int avformat_alloc_output_context2(AVFormatContext**, AVOutputFormat*, const char*, const char*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:311</i>
	 */
	int avformat_alloc_output_context2(AVFormatContext.ByReference ctx[], AVOutputFormat oformat, String format_name, String filename);
	/**
	 * Original signature : <code>int avformat_alloc_output_context2(AVFormatContext**, AVOutputFormat*, const char*, const char*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:311</i>
	 */
	int avformat_alloc_output_context2(AVFormatContext.ByReference ctx[], AVOutputFormat oformat, Pointer format_name, Pointer filename);
	/**
	 * Original signature : <code>int avformat_open_input(AVFormatContext**, const char*, AVInputFormat*, AVDictionary**)</code><br>
	 * <i>native declaration : libavformat/avformat.h:313</i><br>
	 * @deprecated use the safer methods {@link #avformat_open_input(org.ffmpeg.avformat.AVFormatContext.ByReference[], java.lang.String, org.ffmpeg.avformat.AVInputFormat, org.ffmpeg.avutil.AVDictionary.ByReference[])} and {@link #avformat_open_input(org.ffmpeg.avformat.AVFormatContext.ByReference[], com.sun.jna.Pointer, org.ffmpeg.avformat.AVInputFormat, org.ffmpeg.avutil.AVDictionary.ByReference[])} instead
	 */
	@Deprecated 
	int avformat_open_input(PointerByReference ps, Pointer filename, AVInputFormat fmt, PointerByReference options);
	/**
	 * Original signature : <code>int avformat_open_input(AVFormatContext**, const char*, AVInputFormat*, AVDictionary**)</code><br>
	 * <i>native declaration : libavformat/avformat.h:313</i>
	 */
	int avformat_open_input(AVFormatContext.ByReference ps[], String filename, AVInputFormat fmt, org.ffmpeg.avutil.AVDictionary.ByReference options[]);
	/**
	 * Original signature : <code>int avformat_open_input(AVFormatContext**, const char*, AVInputFormat*, AVDictionary**)</code><br>
	 * <i>native declaration : libavformat/avformat.h:313</i>
	 */
	int avformat_open_input(AVFormatContext.ByReference ps[], Pointer filename, AVInputFormat fmt, org.ffmpeg.avutil.AVDictionary.ByReference options[]);
	/**
	 * Original signature : <code>int avformat_find_stream_info(AVFormatContext*, AVDictionary**)</code><br>
	 * <i>native declaration : libavformat/avformat.h:315</i><br>
	 * @deprecated use the safer method {@link #avformat_find_stream_info(org.ffmpeg.avformat.AVFormatContext, org.ffmpeg.avutil.AVDictionary.ByReference[])} instead
	 */
	@Deprecated 
	int avformat_find_stream_info(AVFormatContext ic, PointerByReference options);
	/**
	 * Original signature : <code>int avformat_find_stream_info(AVFormatContext*, AVDictionary**)</code><br>
	 * <i>native declaration : libavformat/avformat.h:315</i>
	 */
	int avformat_find_stream_info(AVFormatContext ic, org.ffmpeg.avutil.AVDictionary.ByReference options[]);
	/**
	 * Original signature : <code>int av_find_best_stream(AVFormatContext*, AVMediaType, int, int, AVCodec**, int)</code><br>
	 * <i>native declaration : libavformat/avformat.h:317</i><br>
	 * @deprecated use the safer method {@link #av_find_best_stream(org.ffmpeg.avformat.AVFormatContext, int, int, int, org.ffmpeg.avcodec.AVCodec.ByReference[], int)} instead
	 */
	@Deprecated 
	int av_find_best_stream(AVFormatContext ic, int type, int wanted_stream_nb, int related_stream, PointerByReference decoder_ret, int flags);
	/**
	 * Original signature : <code>int av_find_best_stream(AVFormatContext*, AVMediaType, int, int, AVCodec**, int)</code><br>
	 * <i>native declaration : libavformat/avformat.h:317</i>
	 */
	int av_find_best_stream(AVFormatContext ic, int type, int wanted_stream_nb, int related_stream, AVCodec.ByReference decoder_ret[], int flags);
	/**
	 * Original signature : <code>int av_read_frame(AVFormatContext*, AVPacket*)</code><br>
	 * <i>native declaration : libavformat/avformat.h:319</i>
	 */
	int av_read_frame(AVFormatContext s, AVPacket pkt);
	/**
	 * Original signature : <code>int av_seek_frame(AVFormatContext*, int, int64_t, int)</code><br>
	 * <i>native declaration : libavformat/avformat.h:321</i>
	 */
	int av_seek_frame(AVFormatContext s, int stream_index, long timestamp, int flags);
	/**
	 * Original signature : <code>int avformat_seek_file(AVFormatContext*, int, int64_t, int64_t, int64_t, int)</code><br>
	 * <i>native declaration : libavformat/avformat.h:323</i>
	 */
	int avformat_seek_file(AVFormatContext s, int stream_index, long min_ts, long ts, long max_ts, int flags);
	/**
	 * Original signature : <code>void avformat_close_input(AVFormatContext**)</code><br>
	 * <i>native declaration : libavformat/avformat.h:325</i><br>
	 * @deprecated use the safer method {@link #avformat_close_input(org.ffmpeg.avformat.AVFormatContext.ByReference[])} instead
	 */
	@Deprecated 
	void avformat_close_input(PointerByReference s);
	/**
	 * Original signature : <code>void avformat_close_input(AVFormatContext**)</code><br>
	 * <i>native declaration : libavformat/avformat.h:325</i>
	 */
	void avformat_close_input(AVFormatContext.ByReference s[]);
